codes/2023/18-Excellence-HUST (C++)/LLVMIRParser/LLVMIRParser.cpp

// Generated from LLVMIR.g4 by ANTLR 4.13.0


#include "LLVMIRListener.h"
#include "LLVMIRVisitor.h"

#include "LLVMIRParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace
{

struct LLVMIRParserStaticData final {
    LLVMIRParserStaticData(
        std::vector<std::string> ruleNames,
        std::vector<std::string> literalNames,
        std::vector<std::string> symbolicNames
    )
        : ruleNames(std::move(ruleNames))
        , literalNames(std::move(literalNames))
        , symbolicNames(std::move(symbolicNames))
        , vocabulary(this->literalNames, this->symbolicNames)
    {
    }

    LLVMIRParserStaticData(const LLVMIRParserStaticData&)            = delete;
    LLVMIRParserStaticData(LLVMIRParserStaticData&&)                 = delete;
    LLVMIRParserStaticData& operator=(const LLVMIRParserStaticData&) = delete;
    LLVMIRParserStaticData& operator=(LLVMIRParserStaticData&&)      = delete;

    std::vector<antlr4::dfa::DFA>       decisionToDFA;
    antlr4::atn::PredictionContextCache sharedContextCache;
    const std::vector<std::string>      ruleNames;
    const std::vector<std::string>      literalNames;
    const std::vector<std::string>      symbolicNames;
    const antlr4::dfa::Vocabulary       vocabulary;
    antlr4::atn::SerializedATNView      serializedATN;
    std::unique_ptr<antlr4::atn::ATN>   atn;
};

::antlr4::internal::OnceFlag llvmirParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
    LLVMIRParserStaticData* llvmirParserStaticData = nullptr;

void llvmirParserInitialize()
{
#if ANTLR4_USE_THREAD_LOCAL_CACHE
    if (llvmirParserStaticData != nullptr) { return; }
#else
    assert(llvmirParserStaticData == nullptr);
#endif
    auto staticData = std::make_unique<LLVMIRParserStaticData>(
        std::vector<std::string>{
            "compilationUnit",
            "topLevelEntity",
            "globalDecl",
            "globalDef",
            "immutable",
            "funcDecl",
            "funcDef",
            "funcHeader",
            "funcBody",
            "basicBlock",
            "instruction",
            "terminator",
            "localDefInst",
            "mathInstruction",
            "valueInstruction",
            "storeInst",
            "allocaInst",
            "loadInst",
            "getElementPtrInst",
            "bitCastInst",
            "zExtInst",
            "sExtInst",
            "siToFpInst",
            "fpToSiInst",
            "iCmpInst",
            "fCmpInst",
            "callInst",
            "retTerm",
            "brTerm",
            "condBrTerm",
            "floatType",
            "concreteType",
            "value",
            "constant",
            "boolConst",
            "intConst",
            "floatConst",
            "arrayConst",
            "type",
            "intType",
            "pointerType",
            "labelType",
            "arrayType",
            "namedType",
            "params",
            "param",
            "label",
            "iPred",
            "args",
            "arg",
            "zeroInitializerConst",
            "fPred"},
        std::vector<std::string>{
            "",
            "'='",
            "'constant'",
            "'global'",
            "'declare'",
            "'define'",
            "'('",
            "')'",
            "'{'",
            "'}'",
            "'add'",
            "','",
            "'fadd'",
            "'sub'",
            "'fsub'",
            "'mul'",
            "'fmul'",
            "'udiv'",
            "'sdiv'",
            "'fdiv'",
            "'urem'",
            "'srem'",
            "'frem'",
            "'store'",
            "'alloca'",
            "'load'",
            "'getelementptr'",
            "'bitcast'",
            "'to'",
            "'zext'",
            "'sext'",
            "'sitofp'",
            "'fptosi'",
            "'icmp'",
            "'fcmp'",
            "'call'",
            "'ret'",
            "'void'",
            "'br'",
            "'float'",
            "'true'",
            "'false'",
            "'['",
            "']'",
            "'*'",
            "'label'",
            "'x'",
            "'eq'",
            "'ne'",
            "'sge'",
            "'sgt'",
            "'sle'",
            "'slt'",
            "'uge'",
            "'ugt'",
            "'ule'",
            "'ult'",
            "'zeroinitializer'",
            "'oeq'",
            "'oge'",
            "'ogt'",
            "'ole'",
            "'olt'",
            "'one'",
            "'ord'",
            "'ueq'",
            "'une'",
            "'uno'"},
        std::vector<std::string>{"",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "",           "",
                                 "Comment",    "WhiteSpace",
                                 "IntLit",     "FloatLit",
                                 "StringLit",  "GlobalIdent",
                                 "LocalIdent", "LabelIdent",
                                 "IntType"}
    );
    staticData->serializedATN = antlr4::atn::SerializedATNView(
        serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0])
    );

    antlr4::atn::ATNDeserializer deserializer;
    staticData->atn = deserializer.deserialize(staticData->serializedATN);

    const size_t count = staticData->atn->getNumberOfDecisions();
    staticData->decisionToDFA.reserve(count);
    for (size_t i = 0; i < count; i++) {
        staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
    }
    llvmirParserStaticData = staticData.release();
}

}   // namespace

LLVMIRParser::LLVMIRParser(TokenStream* input)
    : LLVMIRParser(input, antlr4::atn::ParserATNSimulatorOptions())
{
}

LLVMIRParser::LLVMIRParser(
    TokenStream* input, const antlr4::atn::ParserATNSimulatorOptions& options
)
    : Parser(input)
{
    LLVMIRParser::initialize();
    _interpreter = new atn::ParserATNSimulator(
        this,
        *llvmirParserStaticData->atn,
        llvmirParserStaticData->decisionToDFA,
        llvmirParserStaticData->sharedContextCache,
        options
    );
}

LLVMIRParser::~LLVMIRParser()
{
    delete _interpreter;
}

const atn::ATN& LLVMIRParser::getATN() const
{
    return *llvmirParserStaticData->atn;
}

std::string LLVMIRParser::getGrammarFileName() const
{
    return "LLVMIR.g4";
}

const std::vector<std::string>& LLVMIRParser::getRuleNames() const
{
    return llvmirParserStaticData->ruleNames;
}

const dfa::Vocabulary& LLVMIRParser::getVocabulary() const
{
    return llvmirParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView LLVMIRParser::getSerializedATN() const
{
    return llvmirParserStaticData->serializedATN;
}


//----------------- CompilationUnitContext
//------------------------------------------------------------------

LLVMIRParser::CompilationUnitContext::CompilationUnitContext(
    ParserRuleContext* parent, size_t invokingState
)
    : ParserRuleContext(parent, invokingState)
{
}

tree::TerminalNode* LLVMIRParser::CompilationUnitContext::EOF()
{
    return getToken(LLVMIRParser::EOF, 0);
}

std::vector<LLVMIRParser::TopLevelEntityContext*>
LLVMIRParser::CompilationUnitContext::topLevelEntity()
{
    return getRuleContexts<LLVMIRParser::TopLevelEntityContext>();
}

LLVMIRParser::TopLevelEntityContext* LLVMIRParser::CompilationUnitContext::topLevelEntity(size_t i)
{
    return getRuleContext<LLVMIRParser::TopLevelEntityContext>(i);
}


size_t LLVMIRParser::CompilationUnitContext::getRuleIndex() const
{
    return LLVMIRParser::RuleCompilationUnit;
}

void LLVMIRParser::CompilationUnitContext::enterRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<LLVMIRListener*>(listener);
    if (parserListener != nullptr) parserListener->enterCompilationUnit(this);
}

void LLVMIRParser::CompilationUnitContext::exitRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<LLVMIRListener*>(listener);
    if (parserListener != nullptr) parserListener->exitCompilationUnit(this);
}


std::any LLVMIRParser::CompilationUnitContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<LLVMIRVisitor*>(visitor))
        return parserVisitor->visitCompilationUnit(this);
    else
        return visitor->visitChildren(this);
}

LLVMIRParser::CompilationUnitContext* LLVMIRParser::compilationUnit()
{
    CompilationUnitContext* _localctx =
        _tracker.createInstance<CompilationUnitContext>(_ctx, getState());
    enterRule(_localctx, 0, LLVMIRParser::RuleCompilationUnit);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(107);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == LLVMIRParser::T__3

               || _la == LLVMIRParser::T__4 || _la == LLVMIRParser::GlobalIdent) {
            setState(104);
            topLevelEntity();
            setState(109);
            _errHandler->sync(this);
            _la = _input->LA(1);
        }
        setState(110);
        match(LLVMIRParser::EOF);

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- TopLevelEntityContext
//------------------------------------------------------------------

LLVMIRParser::TopLevelEntityContext::TopLevelEntityContext(
    ParserRuleContext* parent, size_t invokingState
)
    : ParserRuleContext(parent, invokingState)
{
}

LLVMIRParser::GlobalDeclContext* LLVMIRParser::TopLevelEntityContext::globalDecl()
{
    return getRuleContext<LLVMIRParser::GlobalDeclContext>(0);
}

LLVMIRParser::GlobalDefContext* LLVMIRParser::TopLevelEntityContext::globalDef()
{
    return getRuleContext<LLVMIRParser::GlobalDefContext>(0);
}

LLVMIRParser::FuncDeclContext* LLVMIRParser::TopLevelEntityContext::funcDecl()
{
    return getRuleContext<LLVMIRParser::FuncDeclContext>(0);
}

LLVMIRParser::FuncDefContext* LLVMIRParser::TopLevelEntityContext::funcDef()
{
    return getRuleContext<LLVMIRParser::FuncDefContext>(0);
}


size_t LLVMIRParser::TopLevelEntityContext::getRuleIndex() const
{
    return LLVMIRParser::RuleTopLevelEntity;
}

void LLVMIRParser::TopLevelEntityContext::enterRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<LLVMIRListener*>(listener);
    if (parserListener != nullptr) parserListener->enterTopLevelEntity(this);
}

void LLVMIRParser::TopLevelEntityContext::exitRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<LLVMIRListener*>(listener);
    if (parserListener != nullptr) parserListener->exitTopLevelEntity(this);
}


std::any LLVMIRParser::TopLevelEntityContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<LLVMIRVisitor*>(visitor))
        return parserVisitor->visitTopLevelEntity(this);
    else
        return visitor->visitChildren(this);
}

LLVMIRParser::TopLevelEntityContext* LLVMIRParser::topLevelEntity()
{
    TopLevelEntityContext* _localctx =
        _tracker.createInstance<TopLevelEntityContext>(_ctx, getState());
    enterRule(_localctx, 2, LLVMIRParser::RuleTopLevelEntity);

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        setState(116);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
        case 1: {
            enterOuterAlt(_localctx, 1);
            setState(112);
            globalDecl();
            break;
        }

        case 2: {
            enterOuterAlt(_localctx, 2);
            setState(113);
            globalDef();
            break;
        }

        case 3: {
            enterOuterAlt(_localctx, 3);
            setState(114);
            funcDecl();
            break;
        }

        case 4: {
            enterOuterAlt(_localctx, 4);
            setState(115);
            funcDef();
            break;
        }

        default: break;
        }

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- GlobalDeclContext
//------------------------------------------------------------------

LLVMIRParser::GlobalDeclContext::GlobalDeclContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState)
{
}

tree::TerminalNode* LLVMIRParser::GlobalDeclContext::GlobalIdent()
{
    return getToken(LLVMIRParser::GlobalIdent, 0);
}

LLVMIRParser::ImmutableContext* LLVMIRParser::GlobalDeclContext::immutable()
{
    return getRuleContext<LLVMIRParser::ImmutableContext>(0);
}

LLVMIRParser::TypeContext* LLVMIRParser::GlobalDeclContext::type()
{
    return getRuleContext<LLVMIRParser::TypeContext>(0);
}


size_t LLVMIRParser::GlobalDeclContext::getRuleIndex() const
{
    return LLVMIRParser::RuleGlobalDecl;
}

void LLVMIRParser::GlobalDeclContext::enterRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<LLVMIRListener*>(listener);
    if (parserListener != nullptr) parserListener->enterGlobalDecl(this);
}

void LLVMIRParser::GlobalDeclContext::exitRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<LLVMIRListener*>(listener);
    if (parserListener != nullptr) parserListener->exitGlobalDecl(this);
}


std::any LLVMIRParser::GlobalDeclContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<LLVMIRVisitor*>(visitor))
        return parserVisitor->visitGlobalDecl(this);
    else
        return visitor->visitChildren(this);
}

LLVMIRParser::GlobalDeclContext* LLVMIRParser::globalDecl()
{
    GlobalDeclContext* _localctx = _tracker.createInstance<GlobalDeclContext>(_ctx, getState());
    enterRule(_localctx, 4, LLVMIRParser::RuleGlobalDecl);

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(118);
        match(LLVMIRParser::GlobalIdent);
        setState(119);
        match(LLVMIRParser::T__0);
        setState(120);
        immutable();
        setState(121);
        type(0);

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- GlobalDefContext
//------------------------------------------------------------------

LLVMIRParser::GlobalDefContext::GlobalDefContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState)
{
}

tree::TerminalNode* LLVMIRParser::GlobalDefContext::GlobalIdent()
{
    return getToken(LLVMIRParser::GlobalIdent, 0);
}

LLVMIRParser::ImmutableContext* LLVMIRParser::GlobalDefContext::immutable()
{
    return getRuleContext<LLVMIRParser::ImmutableContext>(0);
}

LLVMIRParser::TypeContext* LLVMIRParser::GlobalDefContext::type()
{
    return getRuleContext<LLVMIRParser::TypeContext>(0);
}

LLVMIRParser::ConstantContext* LLVMIRParser::GlobalDefContext::constant()
{
    return getRuleContext<LLVMIRParser::ConstantContext>(0);
}


size_t LLVMIRParser::GlobalDefContext::getRuleIndex() const
{
    return LLVMIRParser::RuleGlobalDef;
}

void LLVMIRParser::GlobalDefContext::enterRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<LLVMIRListener*>(listener);
    if (parserListener != nullptr) parserListener->enterGlobalDef(this);
}

void LLVMIRParser::GlobalDefContext::exitRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<LLVMIRListener*>(listener);
    if (parserListener != nullptr) parserListener->exitGlobalDef(this);
}


std::any LLVMIRParser::GlobalDefContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<LLVMIRVisitor*>(visitor))
        return parserVisitor->visitGlobalDef(this);
    else
        return visitor->visitChildren(this);
}

LLVMIRParser::GlobalDefContext* LLVMIRParser::globalDef()
{
    GlobalDefContext* _localctx = _tracker.createInstance<GlobalDefContext>(_ctx, getState());
    enterRule(_localctx, 6, LLVMIRParser::RuleGlobalDef);

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(123);
        match(LLVMIRParser::GlobalIdent);
        setState(124);
        match(LLVMIRParser::T__0);
        setState(125);
        immutable();
        setState(126);
        type(0);
        setState(127);
        constant();

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- ImmutableContext
//------------------------------------------------------------------

LLVMIRParser::ImmutableContext::ImmutableContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState)
{
}


size_t LLVMIRParser::ImmutableContext::getRuleIndex() const
{
    return LLVMIRParser::RuleImmutable;
}

void LLVMIRParser::ImmutableContext::enterRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<LLVMIRListener*>(listener);
    if (parserListener != nullptr) parserListener->enterImmutable(this);
}

void LLVMIRParser::ImmutableContext::exitRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<LLVMIRListener*>(listener);
    if (parserListener != nullptr) parserListener->exitImmutable(this);
}


std::any LLVMIRParser::ImmutableContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<LLVMIRVisitor*>(visitor))
        return parserVisitor->visitImmutable(this);
    else
        return visitor->visitChildren(this);
}

LLVMIRParser::ImmutableContext* LLVMIRParser::immutable()
{
    ImmutableContext* _localctx = _tracker.createInstance<ImmutableContext>(_ctx, getState());
    enterRule(_localctx, 8, LLVMIRParser::RuleImmutable);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(129);
        _la = _input->LA(1);
        if (!(_la == LLVMIRParser::T__1

              || _la == LLVMIRParser::T__2)) {
            _errHandler->recoverInline(this);
        } else {
            _errHandler->reportMatch(this);
            consume();
        }

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- FuncDeclContext
//------------------------------------------------------------------

LLVMIRParser::FuncDeclContext::FuncDeclContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState)
{
}

LLVMIRParser::FuncHeaderContext* LLVMIRParser::FuncDeclContext::funcHeader()
{
    return getRuleContext<LLVMIRParser::FuncHeaderContext>(0);
}


size_t LLVMIRParser::FuncDeclContext::getRuleIndex() const
{
    return LLVMIRParser::RuleFuncDecl;
}

void LLVMIRParser::FuncDeclContext::enterRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<LLVMIRListener*>(listener);
    if (parserListener != nullptr) parserListener->enterFuncDecl(this);
}

void LLVMIRParser::FuncDeclContext::exitRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<LLVMIRListener*>(listener);
    if (parserListener != nullptr) parserListener->exitFuncDecl(this);
}


std::any LLVMIRParser::FuncDeclContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<LLVMIRVisitor*>(visitor))
        return parserVisitor->visitFuncDecl(this);
    else
        return visitor->visitChildren(this);
}

LLVMIRParser::FuncDeclContext* LLVMIRParser::funcDecl()
{
    FuncDeclContext* _localctx = _tracker.createInstance<FuncDeclContext>(_ctx, getState());
    enterRule(_localctx, 10, LLVMIRParser::RuleFuncDecl);

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(131);
        match(LLVMIRParser::T__3);
        setState(132);
        funcHeader();

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- FuncDefContext
//------------------------------------------------------------------

LLVMIRParser::FuncDefContext::FuncDefContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState)
{
}

LLVMIRParser::FuncHeaderContext* LLVMIRParser::FuncDefContext::funcHeader()
{
    return getRuleContext<LLVMIRParser::FuncHeaderContext>(0);
}

LLVMIRParser::FuncBodyContext* LLVMIRParser::FuncDefContext::funcBody()
{
    return getRuleContext<LLVMIRParser::FuncBodyContext>(0);
}


size_t LLVMIRParser::FuncDefContext::getRuleIndex() const
{
    return LLVMIRParser::RuleFuncDef;
}

void LLVMIRParser::FuncDefContext::enterRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<LLVMIRListener*>(listener);
    if (parserListener != nullptr) parserListener->enterFuncDef(this);
}

void LLVMIRParser::FuncDefContext::exitRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<LLVMIRListener*>(listener);
    if (parserListener != nullptr) parserListener->exitFuncDef(this);
}


std::any LLVMIRParser::FuncDefContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<LLVMIRVisitor*>(visitor))
        return parserVisitor->visitFuncDef(this);
    else
        return visitor->visitChildren(this);
}

LLVMIRParser::FuncDefContext* LLVMIRParser::funcDef()
{
    FuncDefContext* _localctx = _tracker.createInstance<FuncDefContext>(_ctx, getState());
    enterRule(_localctx, 12, LLVMIRParser::RuleFuncDef);

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(134);
        match(LLVMIRParser::T__4);
        setState(135);
        funcHeader();
        setState(136);
        funcBody();

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- FuncHeaderContext
//------------------------------------------------------------------

LLVMIRParser::FuncHeaderContext::FuncHeaderContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState)
{
}

LLVMIRParser::TypeContext* LLVMIRParser::FuncHeaderContext::type()
{
    return getRuleContext<LLVMIRParser::TypeContext>(0);
}

tree::TerminalNode* LLVMIRParser::FuncHeaderContext::GlobalIdent()
{
    return getToken(LLVMIRParser::GlobalIdent, 0);
}

LLVMIRParser::ParamsContext* LLVMIRParser::FuncHeaderContext::params()
{
    return getRuleContext<LLVMIRParser::ParamsContext>(0);
}


size_t LLVMIRParser::FuncHeaderContext::getRuleIndex() const
{
    return LLVMIRParser::RuleFuncHeader;
}

void LLVMIRParser::FuncHeaderContext::enterRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<LLVMIRListener*>(listener);
    if (parserListener != nullptr) parserListener->enterFuncHeader(this);
}

void LLVMIRParser::FuncHeaderContext::exitRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<LLVMIRListener*>(listener);
    if (parserListener != nullptr) parserListener->exitFuncHeader(this);
}


std::any LLVMIRParser::FuncHeaderContext::accept(tree::ParseTreeVisitor* visitor)
{
    if (auto parserVisitor = dynamic_cast<LLVMIRVisitor*>(visitor))
        return parserVisitor->visitFuncHeader(this);
    else
        return visitor->visitChildren(this);
}

LLVMIRParser::FuncHeaderContext* LLVMIRParser::funcHeader()
{
    FuncHeaderContext* _localctx = _tracker.createInstance<FuncHeaderContext>(_ctx, getState());
    enterRule(_localctx, 14, LLVMIRParser::RuleFuncHeader);

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(138);
        type(0);
        setState(139);
        match(LLVMIRParser::GlobalIdent);
        setState(140);
        match(LLVMIRParser::T__5);
        setState(141);
        params();
        setState(142);
        match(LLVMIRParser::T__6);

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- FuncBodyContext
//------------------------------------------------------------------

LLVMIRParser::FuncBodyContext::FuncBodyContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState)
{
}

std::vector<LLVMIRParser::BasicBlockContext*> LLVMIRParser::FuncBodyContext::basicBlock()
{
    return getRuleContexts<LLVMIRParser::BasicBlockContext>();
}

LLVMIRParser::BasicBlockContext* LLVMIRParser::FuncBodyContext::basicBlock(size_t i)
{
    return getRuleContext<LLVMIRParser::BasicBlockContext>(i);
}


